adding more images

--- a/rhsGraph.html
+++ b/rhsGraph.html
@@ -13,7 +13,7 @@
 <h1>
     RHS space for caption/source info
 </h1>
-<img class ="graphy" src="img/graphExtension.png" alt="Smiley face">
+<img class ="graphy" src="img/RHSimg.png" alt="Smiley face">
 <button class='graphicAsset' type="button">Back</button>
 <script>
 
